--- a/index.html
+++ b/index.html
@@ -5,15 +5,69 @@
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+      <link rel="shortcut icon" href="image/logo.jpg" type="image/x-icon">
    <link rel="stylesheet" href="style.css">
    <title>Bank</title>
 </head>
 
 <body>
+   <div class="container" id="login_page">
+      <div class="row">
+         <div class="col-md-3"></div>
+         <div class="col-md-6">
+            <h1 class="bank_tittle ">Welcome to One Bank</h1>
+            <div class="bank_login_area">
+               <div class="mb-3 row">
+                  <label for="staticEmail" class="col-sm-2 col-form-label">Email</label>
+                  <div class="col-sm-10">
+                    <input type="text"  class="form-control-plaintext px-3" id="staticEmail" placeholder="email@example.com">
+                  </div>
+                </div>
+                <div class="mb-3 row">
+                  <label for="inputPassword" class="col-sm-2 col-form-label">Password</label>
+                  <div class="col-sm-10">
+                    <input type="password" class="form-control" id="inputPassword">
+                  </div>
+                </div>
+                <input type="submit" id="login" class="px-3 btn-info my_btn" value="Enter">
+            </div>
+         </div>
+         <div class="col-md-3"></div>
+      </div>
+   </div>
+   <section class="tangition_area container" id="tangition">
+      <div class="row d-flex justify-content-evenly">
+         <div class="col-md-2 tangition-part alert-info">
+            <h4>Deposit</h4>
+            <h1>$000</h1>
+         </div>
+         <div class="col-md-2 tangition-part alert-success">
+            <h4>Balance</h4>
+            <h1>$000</h1>
+         </div>
+         <div class="col-md-2 tangition-part alert-danger">
+            <h4>Withdraw</h4>
+            <h1>$000</h1>
+         </div>
+      </div>
+      <div class="row">
+         <div class="col-md-5"></div>
+      </div>
+   </section> 
 
 
 
-
+   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"></script>
+   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
+      integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
+      crossorigin="anonymous"></script>
+   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+      integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
+      crossorigin="anonymous"></script>
    <script src="code.js"></script>
    <script></script>
 </body>
