--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-      <link rel="shortcut icon" href="image/logo.jpg" type="image/x-icon">
+   <link rel="shortcut icon" href="image/logo.jpg" type="image/x-icon">
    <link rel="stylesheet" href="style.css">
    <title>Bank</title>
 </head>
@@ -22,16 +22,17 @@
                <div class="mb-3 row">
                   <label for="staticEmail" class="col-sm-2 col-form-label">Email</label>
                   <div class="col-sm-10">
-                    <input type="text"  class="form-control-plaintext px-3" id="staticEmail" placeholder="email@example.com">
+                     <input type="text" class="form-control-plaintext px-3" id="staticEmail"
+                        placeholder="email@example.com">
                   </div>
-                </div>
-                <div class="mb-3 row">
+               </div>
+               <div class="mb-3 row">
                   <label for="inputPassword" class="col-sm-2 col-form-label">Password</label>
                   <div class="col-sm-10">
-                    <input type="password" class="form-control" id="inputPassword">
+                     <input type="password" class="form-control" id="inputPassword">
                   </div>
-                </div>
-                <input type="submit" id="login" class="px-3 btn-info my_btn" value="Enter">
+               </div>
+               <input type="submit" id="login" class="px-3 btn-info my_btn" value="Login">
             </div>
          </div>
          <div class="col-md-3"></div>
@@ -39,23 +40,53 @@
    </div>
    <section class="tangition_area container" id="tangition">
       <div class="row d-flex justify-content-evenly">
-         <div class="col-md-2 tangition-part alert-info">
+         <div class="col-md-2 tangition-part alert-info" id="deposit">
             <h4>Deposit</h4>
-            <h1>$000</h1>
+            <h1>$ <span id="current_deposit_amount">000</span></h1>
          </div>
          <div class="col-md-2 tangition-part alert-success">
             <h4>Balance</h4>
-            <h1>$000</h1>
+            <h1>$ <samp id="currentAmount">000</samp></h1>
          </div>
-         <div class="col-md-2 tangition-part alert-danger">
+         <div class="col-md-2 tangition-part alert-danger" id="withdraw">
             <h4>Withdraw</h4>
-            <h1>$000</h1>
+            <h1>$ <span id="currentWithdrawAmount">000</span></h1>
          </div>
       </div>
       <div class="row">
-         <div class="col-md-5"></div>
+         <div class="col-md-3"></div>
+         <div class="col-md-6 ">
+            <div class="withdraw_area" id="withdraw_area">
+               <h1 class="withdraw_tittle ">Withdraw</h1>
+               <div class="mb-3 row">
+                  <div class="col-sm-10">
+                     <input type="number" id="currentWithdraw" class="form-control" id="withdraw"
+                        placeholder="$ Amount you want to Withdraw">
+                  </div>
+               </div>
+               <input type="submit" id="withdrawBtn" class="px-3 btn-info my_btn" value="Withdraw">
+            </div>
+         </div>
+         <div class="col-md-3"></div>
       </div>
-   </section> 
+
+      <div class="row">
+         <div class="col-md-3"></div>
+         <div class="col-md-6 ">
+            <div class="deposit_area" id="deposit_area">
+               <h1 class="withdraw_tittle ">Deposit</h1>
+               <div class="mb-3 row">
+                  <div class="col-sm-10">
+                     <input type="number" class="form-control" id="deposit_amount"
+                        placeholder="$ Amount you want to Deposit">
+                  </div>
+               </div>
+               <input type="submit" id="deposit_btn" class="px-3 btn-info my_btn" value="Deposit">
+            </div>
+         </div>
+         <div class="col-md-3"></div>
+      </div>
+   </section>
 
 
 
